Satheesh/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # Add this line to Specify the Ingress class
  rules:
  - host: a88121e2114584faba267823fc37c95c-1955233511.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /nginx/httpd
        pathType: Prefix
        backend:
          service:
            name: httpd-service
            port:
              number: 80
